--- a/socket_fsm/CMakeLists.txt
+++ b/socket_fsm/CMakeLists.txt
@@ -6,8 +6,10 @@ set(CMAKE_C_STANDARD 17)
 add_executable(server src/server.c
         src/server.h
 )
-add_executable(client src/client.c
+add_executable(client src/clientfsm.c
+        src/client.c
         src/client.h
-        src/clientfsm.c
         src/clientfsm.h
 )
+
+
