--- a/socket_fsm/CMakeLists.txt
+++ b/socket_fsm/CMakeLists.txt
@@ -3,13 +3,14 @@ project(socket_fsm C)
 
 set(CMAKE_C_STANDARD 17)
 
-add_executable(server src/server.c
+add_executable(server src/serverfsm.c
+        src/server.c
         src/server.h
+
 )
 add_executable(client src/clientfsm.c
         src/client.c
         src/client.h
-        src/clientfsm.h
 )
 
 
